# wiki-bot

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: porter_app_wiki-bit_2919.yml
scripts/: manage_templates.py  setup_database.py
src/api/: middleware.py
src/api/routes/: admin.py  webhook.py
src/config/: settings.py
src/data_access/: database_client.py  fact_repository.py  user_repository.py
src/models/: fact.py  message.py  user.py
src/services/: ai_service.py  scheduler_service.py  whatsapp_service.py  wikipedia_service.py
src/utils/: logger.py  template_helper.py
templates/: README.md  daily_fact.txt  menu_list_picker.txt  subscription_subscribed.txt  subscription_unsubscribed.txt
