[project]
name = "wiki-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "fastapi>=0.116.1",
    "openai>=1.3.7",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.5.1",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.43",
    "sqlmodel>=0.0.14",
    "structlog>=25.4.0",
    "twilio>=8.10.0",
    "uvicorn>=0.35.0",
    "wikipedia-api>=0.6.0",
]
